Correccion Imagenes para agregar al escritorio

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,15 @@
   <title>FaeaEventos</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
-
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <link rel="icon" sizes="192x192" href="/assets/imagenes/faea192.png">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="msapplication-starturl" content="/">
-  <meta name="theme-color" content="#fc4a1a">
+  <meta name="theme-color" content="#893242">
 
 
   <link rel="manifest" href="/manifest.json">
