--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,17 @@
 
   <link rel="manifest" href="/manifest.json">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-100757456-3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-100757456-3');
+</script>
+
+
 </head>
 <body>
   <app-root></app-root>
