--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FaeaEventos</title>
+  <title>FaEA Eventos</title>
   <base href="/">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
